--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,700,700i');
- @import url(https://fonts.googleapis.com/css?family=Righteous);
- @import url(https://fonts.googleapis.com/css?family=Titillium+Web:900);
- @import url(https://fonts.googleapis.com/css?family=Exo+2:200i);
+@import url(https://fonts.googleapis.com/css?family=Righteous);
+@import url(https://fonts.googleapis.com/css?family=Titillium+Web:900);
+@import url(https://fonts.googleapis.com/css?family=Exo+2:200i);
  body {
     font-family:'Raleway', sans-serif;
     background-image: url("https://cdn.glitch.com/161fba10-08d4-4007-b3c4-cf3478168729%2Fbg-galaxy3-6.png?1557025303102");
@@ -11,10 +11,6 @@ h3, h4, h5, h6 {
     margin-top: 16px;
     margin-bottom: 8px;
     color: #fff;
-}
-a.download {
-    font-style: italic;
-    c text-decoration: none;
 }
 img.thumbnail {
     width: 230px;
@@ -41,7 +37,7 @@ div.main {
     padding: 24px;
     width: 984px;
     margin: 24px auto;
-    height: 1084px;
+    height: 1150px;
 }
 div.doublePanelGrid {
     width: 448px;
@@ -307,3 +303,56 @@ ul li {
     color: #4a4a4a;
     transition: color 0.3s ease-in;
 }
+canvas {
+    display: block;
+    vertical-align: bottom;
+  }
+  
+  /* ---- particles.js container ---- */
+  
+  #particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #b61924;
+    background-image: url("");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+  }
+  
+  /* ---- stats.js ---- */
+  
+  .count-particles{
+    background: #000022;
+    position: absolute;
+    top: 48px;
+    left: 0;
+    width: 80px;
+    color: #13E8E9;
+    font-size: .8em;
+    text-align: left;
+    text-indent: 4px;
+    line-height: 14px;
+    padding-bottom: 2px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: bold;
+  }
+  
+  .js-count-particles{
+    font-size: 1.1em;
+  }
+  
+  #stats,
+  .count-particles{
+    -webkit-user-select: none;
+  }
+  
+  #stats{
+    border-radius: 3px 3px 0 0;
+    overflow: hidden;
+  }
+  
+  .count-particles{
+    border-radius: 0 0 3px 3px;
+  }
